infrastructure/deploy.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: movetokube
  namespace: movetokube
spec:
  selector:
    matchLabels:
      app: movetokube
  replicas: 2
  template:
    metadata:
      labels:
        app: movetokube
    spec:
      containers:
      - name: nginx
        image: eu.gcr.io/kube-229818/movetokube:0.9
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /healthz/
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz/
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
