infrastructure/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: movetokube-com
  namespace: movetokube
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: movetokube-com-tls
  backend:
    serviceName: movetokube-web
    servicePort: 80
